--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="data-previous-operand" class="previous-operand"></div>
         <div id="data-current-operand" class="current-operand"></div>
       </div>
-      <button class="data-all-clear" class="span-two">AC</button>
+      <button class="data-all-clear">AC</button>
       <button class="data-delete">DEL</button>
       <button class="data-number">.</button>
       <button class="data-operation">÷</button>
@@ -31,7 +31,7 @@
       <button class="data-number">3</button>
       <button class="data-operation">-</button>
       <button class="data-number">0</button>
-      <button class="data-equals" class="equals">=</button>
+      <button id="data-equals" class="equals">=</button>
     </div>
   </body>
 </html>
